configure test for sin6_len (needed w/FreeBSD) not sin_len.  sin_len breaking   kFreeBSD-amd64 arch compile

--- a/configure.ac
+++ b/configure.ac
@@ -168,12 +168,8 @@ AC_CHECK_DECLS([CPU_SET],[],[],[
 AC_CHECK_DECLS([SIGALRM],[],[],[#include <signal.h>])
 AC_CHECK_MEMBERS([struct tcp_info.tcpi_total_retrans],[],[],
 			 [#include <netinet/tcp.h>])
-AC_CHECK_MEMBERS([struct sockaddr_in.sin_len], [],[],
-[
-#include <sys/types.h>
-#include <sys/socket.h>
-#include <netinet/in.h>
-])
+AC_CHECK_MEMBERS([struct sockaddr_in6.sin6_len], [],[],
+			 [#include <netinet/in.h>])
 
 dnl             Gotten from some NetBSD configure.in
 dnl		We assume that if sprintf() supports %lld or %qd,
