--- a/configure.ac
+++ b/configure.ac
@@ -160,7 +160,7 @@ AC_FUNC_VPRINTF
 AC_CHECK_FUNCS([atexit memset pthread_cancel select strchr strerror strtol strtoll usleep clock_gettime sched_setscheduler mlockall setitimer nanosleep])
 AC_REPLACE_FUNCS(snprintf inet_pton inet_ntop gettimeofday)
 AC_CHECK_DECLS([ENOBUFS, EWOULDBLOCK],[],[],[#include <errno.h>])
-AC_CHECK_DECLS([SO_TIMESTAMP, SO_SNDTIMEO],[],[],[#include <sys/socket.h>])
+AC_CHECK_DECLS([SO_TIMESTAMP, SO_SNDTIMEO, SO_MAX_PACING_RATE],[],[],[#include <sys/socket.h>])
 AC_CHECK_DECLS([IPV6_TCLASS],[],[],[#include <netinet/in.h>])
 AC_CHECK_DECLS([CPU_SET],[],[],[
 	#define _GNU_SOURCE
