a bit more on v4 SSM mcast join

--- a/config.h.in
+++ b/config.h.in
@@ -233,6 +233,9 @@
 /* Define to 1 if the system has the type `struct ip_mreq'. */
 #undef HAVE_STRUCT_IP_MREQ
 
+/* Define to 1 if the system has the type `struct ip_mreq_source'. */
+#undef HAVE_STRUCT_IP_MREQ_SOURCE
+
 /* Define to 1 if the system has the type `struct sockaddr_in6'. */
 #undef HAVE_STRUCT_SOCKADDR_IN6
 
